{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 36,
  "lineage": "acc66d70-a90a-a632-b6ca-45cec967c776",
  "resources": [
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public_routetable",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:route-table/rtb-0ecb335062c260d82",
            "default_route_table_id": "rtb-0ecb335062c260d82",
            "id": "rtb-0ecb335062c260d82",
            "owner_id": "245182714656",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bbd9d573287dab80",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tesla.dev-public_routetable"
            },
            "tags_all": {
              "Name": "tesla.dev-public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:internet-gateway/igw-0bbd9d573287dab80",
            "id": "igw-0bbd9d573287dab80",
            "owner_id": "245182714656",
            "tags": {
              "Name": "tesla.dev-igw"
            },
            "tags_all": {
              "Name": "tesla.dev-igw"
            },
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routetable",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:route-table/rtb-0cbd15c69704985db",
            "id": "rtb-0cbd15c69704985db",
            "owner_id": "245182714656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tesla.dev-private_routetable"
            },
            "tags_all": {
              "Name": "tesla.dev-private_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routetable_assoc",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab55a991259fdf98",
            "route_table_id": "rtb-0cbd15c69704985db",
            "subnet_id": "subnet-0713648e4cb2b117f"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_routetable",
            "module.my_vpc.aws_subnet.private_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc545913ba486c7d",
            "route_table_id": "rtb-0cbd15c69704985db",
            "subnet_id": "subnet-02c8fd05eaf526522"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_routetable",
            "module.my_vpc.aws_subnet.private_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d9913d6baf2757b",
            "route_table_id": "rtb-0cbd15c69704985db",
            "subnet_id": "subnet-0c048875e0989177f"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_routetable",
            "module.my_vpc.aws_subnet.private_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routetable_assoc",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f149cb1c11c5c89",
            "route_table_id": "rtb-0ecb335062c260d82",
            "subnet_id": "subnet-03c9e007f56c5e0f7"
          },
          "dependencies": [
            "module.my_vpc.aws_default_route_table.public_routetable",
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_subnet.public_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d3b77c1ca9e301f",
            "route_table_id": "rtb-0ecb335062c260d82",
            "subnet_id": "subnet-02c281a007aa540c6"
          },
          "dependencies": [
            "module.my_vpc.aws_default_route_table.public_routetable",
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_subnet.public_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b8d4db9b2574eea",
            "route_table_id": "rtb-0ecb335062c260d82",
            "subnet_id": "subnet-0456457badb20ff6b"
          },
          "dependencies": [
            "module.my_vpc.aws_default_route_table.public_routetable",
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_subnet.public_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-0713648e4cb2b117f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0713648e4cb2b117f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.dev-private _subnets.1"
            },
            "tags_all": {
              "Name": "tesla.dev-private _subnets.1"
            },
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-02c8fd05eaf526522",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c8fd05eaf526522",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.dev-private _subnets.2"
            },
            "tags_all": {
              "Name": "tesla.dev-private _subnets.2"
            },
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-0c048875e0989177f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.6.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c048875e0989177f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.dev-private _subnets.3"
            },
            "tags_all": {
              "Name": "tesla.dev-private _subnets.3"
            },
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-03c9e007f56c5e0f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c9e007f56c5e0f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.dev-public_subnets.1"
            },
            "tags_all": {
              "Name": "tesla.dev-public_subnets.1"
            },
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-02c281a007aa540c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c281a007aa540c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.dev-public_subnets.2"
            },
            "tags_all": {
              "Name": "tesla.dev-public_subnets.2"
            },
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-0456457badb20ff6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0456457badb20ff6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.dev-public_subnets.3"
            },
            "tags_all": {
              "Name": "tesla.dev-public_subnets.3"
            },
            "vpc_id": "vpc-0610f71f065f54d9c"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:vpc/vpc-0610f71f065f54d9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01eea8362063387d5",
            "default_route_table_id": "rtb-0ecb335062c260d82",
            "default_security_group_id": "sg-0bec6317e22aebf9a",
            "dhcp_options_id": "dopt-080aebb0cf4cdc354",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0610f71f065f54d9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ecb335062c260d82",
            "owner_id": "245182714656",
            "tags": {
              "Name": "tesla.dev-vpc",
              "costcode": "123",
              "terraformrepo": "https://github.com/bhargavimandala/vpc-setup.git"
            },
            "tags_all": {
              "Name": "tesla.dev-vpc",
              "costcode": "123",
              "terraformrepo": "https://github.com/bhargavimandala/vpc-setup.git"
            }
          }
        }
      ]
    },
    {
      "module": "module.staging_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public_routetable",
      "provider": "module.staging_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:route-table/rtb-03362c145e8f2db8f",
            "default_route_table_id": "rtb-03362c145e8f2db8f",
            "id": "rtb-03362c145e8f2db8f",
            "owner_id": "245182714656",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5995654e1095f98",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tesla.staging-public_routetable"
            },
            "tags_all": {
              "Name": "tesla.staging-public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-076733ce89dcc9a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_vpc.aws_internet_gateway.gw",
            "module.staging_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.staging_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.staging_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:internet-gateway/igw-0b5995654e1095f98",
            "id": "igw-0b5995654e1095f98",
            "owner_id": "245182714656",
            "tags": {
              "Name": "tesla.staging-igw"
            },
            "tags_all": {
              "Name": "tesla.staging-igw"
            },
            "vpc_id": "vpc-076733ce89dcc9a07"
          },
          "dependencies": [
            "module.staging_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.staging_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routetable",
      "provider": "module.staging_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:route-table/rtb-00b2edcc23fdc858d",
            "id": "rtb-00b2edcc23fdc858d",
            "owner_id": "245182714656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tesla.staging-private_routetable"
            },
            "tags_all": {
              "Name": "tesla.staging-private_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-076733ce89dcc9a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.staging_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routetable_assoc",
      "provider": "module.staging_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa0055b730986834",
            "route_table_id": "rtb-00b2edcc23fdc858d",
            "subnet_id": "subnet-037bc0d4cb05347f6"
          },
          "dependencies": [
            "module.staging_vpc.aws_route_table.private_routetable",
            "module.staging_vpc.aws_subnet.private_subnets",
            "module.staging_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc4879b0742ce0f0",
            "route_table_id": "rtb-00b2edcc23fdc858d",
            "subnet_id": "subnet-0586a3b7954fcf424"
          },
          "dependencies": [
            "module.staging_vpc.aws_route_table.private_routetable",
            "module.staging_vpc.aws_subnet.private_subnets",
            "module.staging_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.staging_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routetable_assoc",
      "provider": "module.staging_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027c4ab52abc02363",
            "route_table_id": "rtb-03362c145e8f2db8f",
            "subnet_id": "subnet-08a97ffcd45943530"
          },
          "dependencies": [
            "module.staging_vpc.aws_default_route_table.public_routetable",
            "module.staging_vpc.aws_internet_gateway.gw",
            "module.staging_vpc.aws_subnet.public_subnets",
            "module.staging_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0769e68715fd5bc89",
            "route_table_id": "rtb-03362c145e8f2db8f",
            "subnet_id": "subnet-01ce81e9659425ece"
          },
          "dependencies": [
            "module.staging_vpc.aws_default_route_table.public_routetable",
            "module.staging_vpc.aws_internet_gateway.gw",
            "module.staging_vpc.aws_subnet.public_subnets",
            "module.staging_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.staging_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.staging_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-037bc0d4cb05347f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.15.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037bc0d4cb05347f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.staging-private _subnets.1"
            },
            "tags_all": {
              "Name": "tesla.staging-private _subnets.1"
            },
            "vpc_id": "vpc-076733ce89dcc9a07"
          },
          "dependencies": [
            "module.staging_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-0586a3b7954fcf424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.15.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0586a3b7954fcf424",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.staging-private _subnets.2"
            },
            "tags_all": {
              "Name": "tesla.staging-private _subnets.2"
            },
            "vpc_id": "vpc-076733ce89dcc9a07"
          },
          "dependencies": [
            "module.staging_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.staging_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.staging_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-08a97ffcd45943530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.15.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a97ffcd45943530",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.staging-public_subnets.1"
            },
            "tags_all": {
              "Name": "tesla.staging-public_subnets.1"
            },
            "vpc_id": "vpc-076733ce89dcc9a07"
          },
          "dependencies": [
            "module.staging_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:subnet/subnet-01ce81e9659425ece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.15.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ce81e9659425ece",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245182714656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tesla.staging-public_subnets.2"
            },
            "tags_all": {
              "Name": "tesla.staging-public_subnets.2"
            },
            "vpc_id": "vpc-076733ce89dcc9a07"
          },
          "dependencies": [
            "module.staging_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.staging_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.staging_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:245182714656:vpc/vpc-076733ce89dcc9a07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/22",
            "default_network_acl_id": "acl-08d0e77bcbc192497",
            "default_route_table_id": "rtb-03362c145e8f2db8f",
            "default_security_group_id": "sg-08d2d8887caec2294",
            "dhcp_options_id": "dopt-080aebb0cf4cdc354",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076733ce89dcc9a07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03362c145e8f2db8f",
            "owner_id": "245182714656",
            "tags": {
              "Name": "tesla.staging-vpc",
              "costcode": "345",
              "terraformrepo": "https://github.com/bhargavimandala/vpc-setup.git"
            },
            "tags_all": {
              "Name": "tesla.staging-vpc",
              "costcode": "345",
              "terraformrepo": "https://github.com/bhargavimandala/vpc-setup.git"
            }
          }
        }
      ]
    }
  ]
}